<resources>
    <string name="app_name">iHealth Club</string>
    <string name="reaction">reaction</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="next">Next</string>
    <string name="continues">Continue</string>
    <string name="home">Home</string>
    <string name="friend">Friend</string>
    <string name="personal">Personal</string>
    <string name="watch">Watch</string>
    <string name="notify">Notify</string>
    <string name="menu">Menu</string>
    <string name="loading">Loading …</string>
    <string name="create_account">Create account</string>
    <string name="finishing_singing_up">Finishing singing up</string>
    <string name="terms_privacy"><![CDATA[Terms & privacy]]></string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="custom">Custom</string>
    <string name="email">Email</string>
    <string name="birthday">Birthday</string>
    <string name="gender">Gender</string>
    <string name="mobile_number">Mobile number</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="log_into_another_account">Log Into Another Account</string>
    <string name="find_your_account">Find Your Account</string>
    <string name="create_new_account">Create new account</string>
    <string name="log_in">Log in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="et_hint_thinking"><font size="24">What are you thinking?</font></string>
    <string name="image_video">Image/video</string>
    <string name="tag_someone_else">Tag someone else</string>
    <string name="edit_profile">Edit profile</string>
    <string name="label_brush">Brush</string>
    <string name="label_shape">Shape</string>
    <string name="label_oval">Oval</string>
    <string name="label_rectangle">Rectangle</string>
    <string name="label_line">Line</string>
    <string name="label_emoji">Emoji</string>
    <string name="label_sticker">Sticker</string>
    <string name="label_eraser">Eraser</string>
    <string name="label_eraser_mode">Eraser Mode</string>
    <string name="label_text">Text</string>
    <string name="label_filter">Filter</string>
    <string name="label_adjust">Adjust</string>
    <string name="msg_save_image">Are you want to exit without saving image ?</string>
    <string name="app_intent_name">PhotoEditor</string>
    <string name="msg_save_image_to_share">Please save image to share</string>
    <string name="msg_share_image">Share Image</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="the_mobile_number">Enter the mobile number where you can be reached\n No one else will see this on profile</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="the_email">Enter the email where you can be reached\n No one else will see this on profile</string>
    <string name="create_account_with_number_phone">Create account with Number phone</string>
    <string name="create_account_with_number_email">Create account with Email</string>
    <string name="join_ihealth_club">Join iHealth Club</string>
    <string name="create_a_new_account">We\'ll help you\ncreate a new account in a few easy step</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="what_your_name">What\'s your name?</string>
    <string name="enter_the_name_you">Enter the name you use in real life</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="what_your_birthday">What\'s your birthday?</string>
    <string name="choose_your_date">Choose your date of birth \nYou can always make this private later</string>
    <string name="what_your_gender">What\'s your gender?</string>
    <string name="you_can_change_gender">You can change who sees your gender on your profile later</string>
    <string name="select_custom">Select custom to choose another gender, or if you’d rather not say</string>
    <string name="send_email_again">Send email again</string>
    <string name="we_sent">We sent 6 digit code to your phone number</string>
    <string name="enter_the_code_we_sent_to">Enter the code we sent to</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="choose_a_password">Choose a password</string>
    <string name="create_a_password">Create a password at least with 6 characters. \nIt should be something other couldn\'t guess</string>
    <string name="search_by_email_instead">Search by email instead</string>
    <string name="search_by_number_phone_instead">Search by number phone instead</string>
    <string name="add_to_story">Add to story</string>
    <string name="edit_public_detail">Edit public detail</string>
    <string name="search_friend">Search friend</string>
    <string name="all_your_friends">All your friends</string>
    <string name="phone_or_email">Phone or Email</string>
    <string name="you_can_use_account_ihealth_sport_to_login">You can use account ihealth sport to login</string>
</resources>