<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/general_background"
    tools:context=".view.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/_16sdp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="@dimen/_164sdp"
            android:layout_height="@dimen/_200sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/general_logo_app" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_mobile_email"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            app:endIconDrawable="@drawable/ic_baseline_close_24"
            app:endIconMode="clear_text"
            app:endIconTint="@color/view_line">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_phone_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/phone_or_email"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLength="40"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="@dimen/_12ssp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="25"
                android:maxLines="1"
                android:textSize="@dimen/_12ssp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24sdp"
            android:text="@string/you_can_use_account_ihealth_sport_to_login"
            android:gravity="center"
            android:textColor="@color/general_linear_blue"
            android:textStyle="bold"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_background_blue_linear"
            android:text="@string/log_in"
            android:layout_marginTop="@dimen/_8sdp"
            android:textAllCaps="false"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/forgot_password"
            android:gravity="center"
            android:textColor="@color/general_linear_blue"
            android:textStyle="bold"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button_create"
            android:text="@string/create_new_account"
            android:textAllCaps="false"
            android:layout_marginTop="@dimen/_16sdp" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>